--- a/hospital_billing2/admin_dashboard.html
+++ b/hospital_billing2/admin_dashboard.html
@@ -170,7 +170,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link text-dark" href="#" data-module="billing"
-                  ><i class="bi bi-receipt me-2"></i>Billings</a
+                  ><i class="bi bi-receipt me-2"></i>View Billings</a
                 >
               </li>
               <li class="nav-item">
