--- a/hospital_billing2/pages/masterfiles/patient.html
+++ b/hospital_billing2/pages/masterfiles/patient.html
@@ -28,8 +28,11 @@
                 <tr>
                   <th>Full Name</th>
                   <th>Gender</th>
+                  <th>Birthdate</th>
+                  <th>Civil Status</th>
                   <th>Contact No</th>
-                 
+                  <th>Email</th>
+                  <th>Address</th>
                   <th width="180">Actions</th>
                 </tr>
               </thead>
@@ -41,12 +44,8 @@
         </div>
       </div>
 
-
-
     </div>
   </div>
 </div>
 
-<!-- Patient Modal Template -->
-<!-- This will be dynamically populated by the PatientManager class in patients.js -->
-<!-- The modal will be inserted here when needed -->
+<!-- Patient Modal Template: will be generated dynamically by PatientManager -->
