--- a/hospital_billing2/pages/transactions/admission.html
+++ b/hospital_billing2/pages/transactions/admission.html
@@ -20,11 +20,13 @@
           <h5 class="mb-0">Admissions List</h5>
         </div>
         <div class="card-body p-0">
-                    <div class="table-responsive">
+          <div class="table-responsive">
             <table class="table table-hover mb-0">
               <thead class="table-light">
                 <tr>
                   <th>Patient</th>
+                  <th>Doctor</th>
+                  <th>User</th>
                   <th>Admission Date</th>
                   <th>Status</th>
                   <th width="180">Actions</th>
@@ -32,11 +34,12 @@
               </thead>
               <tbody id="admissionTableBody">
                 <tr>
-                  <td colspan="4" class="text-center text-muted py-3">No admissions found.</td>
+                  <td colspan="6" class="text-center text-muted py-3">No admissions found.</td>
                 </tr>
               </tbody>
             </table>
           </div>
+        </div>
       </div>
     </div>
   </div>
