--- a/hospital_billing2/pages/transactions/payment.html
+++ b/hospital_billing2/pages/transactions/payment.html
@@ -59,6 +59,7 @@
                   <th>Amount</th>
                   <th>Method</th>
                   <th>Insurance</th>
+                  <th>Coverage</th>
                   <th>Remarks</th>
                 </tr>
               </thead>
@@ -85,6 +86,7 @@
                   <th>Amount</th>
                   <th>Method</th>
                   <th>Insurance</th>
+                  <th>Coverage</th>
                   <th>Remarks</th>
                   <th style="width:140px;">Actions</th>
                 </tr>
