--- a/hospital_billing2/pages/dashboard.html
+++ b/hospital_billing2/pages/dashboard.html
@@ -5,9 +5,9 @@
 
     <!-- Active Admissions -->
     <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-      <div class="card shadow-sm border-0 rounded-4 p-4 h-100 text-white bg-success">
+      <div class="card shadow-sm border-0 rounded-4 p-4 h-100 text-white bg-success" role="region" aria-label="Active Admissions">
         <div class="d-flex align-items-center">
-          <i class="bi bi-door-open-fill dashboard-icon me-3"></i>
+          <i class="bi bi-door-open-fill dashboard-icon me-3" aria-hidden="true"></i>
           <div>
             <h5 class="mb-1">Active Admissions</h5>
             <h2 id="activeAdmissions" class="fw-bold">0</h2>
@@ -18,9 +18,9 @@
 
     <!-- Rooms Occupied -->
     <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-      <div class="card shadow-sm border-0 rounded-4 p-4 h-100 text-white bg-warning">
+      <div class="card shadow-sm border-0 rounded-4 p-4 h-100 text-white bg-warning" role="region" aria-label="Rooms Occupied">
         <div class="d-flex align-items-center">
-          <i class="bi bi-house-fill dashboard-icon me-3"></i>
+          <i class="bi bi-house-fill dashboard-icon me-3" aria-hidden="true"></i>
           <div>
             <h5 class="mb-1">Rooms Occupied</h5>
             <h2 id="roomsOccupied" class="fw-bold">0</h2>
@@ -29,11 +29,11 @@
       </div>
     </div>
 
-    <!-- Lab Requests Pending -->
+    <!-- Pending Lab Requests -->
     <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-      <div class="card shadow-sm border-0 rounded-4 p-4 h-100 text-white bg-danger">
+      <div class="card shadow-sm border-0 rounded-4 p-4 h-100 text-white bg-danger" role="region" aria-label="Pending Lab Requests">
         <div class="d-flex align-items-center">
-          <i class="bi bi-flask dashboard-icon me-3"></i>
+          <i class="bi bi-flask dashboard-icon me-3" aria-hidden="true"></i>
           <div>
             <h5 class="mb-1">Pending Lab Requests</h5>
             <h2 id="pendingLabRequests" class="fw-bold">0</h2>
@@ -42,11 +42,11 @@
       </div>
     </div>
 
-    <!-- Total Billing -->
+    <!-- Billing Records -->
     <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-      <div class="card shadow-sm border-0 rounded-4 p-4 h-100 text-dark bg-light border-primary">
+      <div class="card shadow-sm border-0 rounded-4 p-4 h-100 bg-light border-primary text-dark" role="region" aria-label="Billing Records">
         <div class="d-flex align-items-center">
-          <i class="bi bi-cash-stack dashboard-icon text-primary me-3"></i>
+          <i class="bi bi-cash-stack dashboard-icon text-primary me-3" aria-hidden="true"></i>
           <div>
             <h5 class="mb-1">Billing Records</h5>
             <h2 id="totalBilling" class="fw-bold">₱0.00</h2>
@@ -57,9 +57,9 @@
 
     <!-- Payments Received -->
     <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-      <div class="card shadow-sm border-0 rounded-4 p-4 h-100 text-white bg-secondary">
+      <div class="card shadow-sm border-0 rounded-4 p-4 h-100 text-white bg-secondary" role="region" aria-label="Payments Received">
         <div class="d-flex align-items-center">
-          <i class="bi bi-credit-card-2-front-fill dashboard-icon me-3"></i>
+          <i class="bi bi-credit-card-2-front-fill dashboard-icon me-3" aria-hidden="true"></i>
           <div>
             <h5 class="mb-1">Payments Received</h5>
             <h2 id="totalPayments" class="fw-bold">₱0.00</h2>
