--- a/hospital_billing2/pages/transactions/room_assignment.html
+++ b/hospital_billing2/pages/transactions/room_assignment.html
@@ -24,12 +24,14 @@
         </div>
         <div class="card-body p-0">
           <div class="table-responsive">
-            <table class="table table-hover mb-0">
+            <table class="table table-hover table-striped mb-0" id="assignmentTable">
               <thead class="table-light">
                 <tr>
                   <th>Admission</th>
                   <th>Room</th>
-                  <th>Assigned Date</th>
+                  <th>Start Date</th>
+                  <th>End Date</th>
+                  <th>Status</th>
                   <th style="width:140px;">Actions</th>
                 </tr>
               </thead>
@@ -47,8 +49,8 @@
 <!-- Add/Edit Modal -->
 <div class="modal fade" id="assignmentModal" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
-    <form id="assignmentForm" class="modal-content needs-validation" novalidate>
-      <div class="modal-header bg-primary text-white">
+    <form id="assignmentForm" class="modal-content needs-validation animate__animated animate__fadeIn" novalidate>
+      <div class="modal-header text-white">
         <h5 class="modal-title"><i class="bi bi-pencil-square"></i> Room Assignment</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
@@ -65,14 +67,20 @@
           <div class="invalid-feedback">Please select a room.</div>
         </div>
         <div class="mb-3">
-          <label for="assignedDate" class="form-label">Assigned Date</label>
+          <label for="assignedDate" class="form-label">Start Date</label>
           <input type="date" class="form-control" id="assignedDate" required aria-required="true" />
-          <div class="invalid-feedback">Please enter an assigned date.</div>
+          <div class="invalid-feedback">Please enter a start date.</div>
+        </div>
+        <div class="mb-3">
+          <label for="endDate" class="form-label">End Date</label>
+          <input type="date" class="form-control" id="endDate" />
+          <div class="invalid-feedback">End date must be after start date.</div>
+          <small class="text-muted">Leave blank for active assignments</small>
         </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-        <button type="submit" class="btn btn-primary">Save Assignment</button>
+        <button type="submit" class="btn btn-primary" id="saveBtn">Save Assignment</button>
       </div>
     </form>
   </div>
@@ -81,7 +89,7 @@
 <!-- ✅ View Details Modal -->
 <div class="modal fade" id="viewModal" tabindex="-1" aria-labelledby="viewModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
+    <div class="modal-content animate__animated animate__fadeIn">
       <div class="modal-header bg-info text-white">
         <h5 class="modal-title" id="viewModalLabel"><i class="bi bi-eye"></i> Assignment Details</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -89,6 +97,65 @@
       <div class="modal-body">
         <!-- Filled dynamically by JS -->
       </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
     </div>
   </div>
 </div>
+
+<!-- Add CSS for styling -->
+<style>
+  .room-assignment-module .card {
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05) !important;
+  }
+  
+  .room-assignment-module .table th {
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: 0.8rem;
+    letter-spacing: 0.5px;
+  }
+  
+  .room-assignment-module .table td {
+    vertical-align: middle;
+  }
+  
+  .room-assignment-module .fade-row {
+    transition: all 0.3s ease;
+  }
+  
+  .room-assignment-module .modal-header.bg-success {
+    background-color: #28a745 !important;
+  }
+  
+  .room-assignment-module .modal-header.bg-warning {
+    background-color: #ffc107 !important;
+    color: #212529 !important;
+  }
+  
+  .room-assignment-module .modal-header.bg-danger {
+    background-color: #dc3545 !important;
+  }
+  
+  .room-assignment-module .modal-header.bg-info {
+    background-color: #17a2b8 !important;
+  }
+  
+  .room-assignment-module .modal-header.bg-primary {
+    background-color: #007bff !important;
+  }
+  
+  .badge.bg-active {
+    background-color: #28a745 !important;
+  }
+  
+  .badge.bg-completed {
+    background-color: #6c757d !important;
+  }
+</style>
+
+<!-- Include animate.css for animations -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
